# badatabase

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  badatabase.cpp  badatabase.h  batypes.h  compile_commands.json  config.h  config.h.in  configure  connconfmanager.cpp  connconfmanager.h  connmanager.cpp  logger.h  query.cpp  query.h
batypes/: line.h  sensor.h  zone.h
config/: configDB.json
db/: .env-example  Dockerfile  README.md  docker-compose.yml  fill.py  init.sql  initgen.sh  maingen.sh  pg_hba.conf  postgresql.conf  requirements.txt  start-replica.sh
db/backup/: Dockerfile  backup.env-example  entrypoint.sh
db/kerberos/: kerberos.env-example  krb5.conf.auto
db/kerberos/client/: Dockerfile  configureKerberosClient.sh  init-script.sh
db/kerberos/kdc/: Dockerfile  init-script.sh
db/kerberos/kdc-kadmin/: init-script.sh
db/kerberos/kerberos-client/: Dockerfile  configureKerberosClient.sh
db/primary/: Dockerfile  primary.env-example
db/replica/: Dockerfile  entrypoint.sh  replica-entrypoint.sh  replica.env-example
db/sql/: crypto.sql  main.sql  rls.sql  role.sql  sqlgen.sh  template.sql  users.sql
db/sql/entity/: ba.sql  lablers.sql  log.sql
db/sql/func/: fetch.sql  handler-crypto.sql  handler-log.sql  handler-point.sql  insert-sensors.sql  insert-sweepdatalorenz.sql  select.sql
db/sql/trigger/: crypto.sql  log.sql  point.sql
db/sql/view/: lablers.sql
db/ssl/: gen.sh  postgres.crt  postgres.key
include/: badatabase.h  config.h  connconfmanager.h  connmanager.h  namestranslator.h  query.h
include/batypes/: badeviceinfo.h  lorenz.h  sensor.cpp  zone.h
sql/: .env  Dockerfile  README.md  docker-compose.yml  fill.py  init-db.sh  init.sql  main.sql  mainsql-gen.sh  old-db-consistency.sql  reset-db.sh  rls.sql  role.sql  table.sql
sql/entity/: ba.sql  log.sql
sql/func/: insert-badeviceinfo.sql  insert-sensors.sql  insert-sensorslines.sql  insert-zones.sql  insert.sql  select.sql  update.sql
sql/trigger/: log.sql
src/: CMakeLists.txt  badatabase.cpp  query.cpp  sensor.cpp
